--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(create_line_chart)
+export(create_participant_sankey)
+export(create_sankey)
 export(daily_snack_count)
 export(dataload_qaqc)
 export(dataload_qaqc_fb_usage)
@@ -16,7 +18,13 @@ export(fitbit_pa_qaqc)
 export(fitbit_pa_week)
 export(load_data)
 export(load_fb_data)
+export(participant_snack_count)
+export(qaqc)
 export(run_app)
+export(seven_day_summary)
+export(snackapp_usage_daily_sum)
+export(snackapp_usage_p_sum)
+export(weekly_snack_count)
 import(shiny)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
